@@ -41,7 +41,8 @@ module TZInfo
     # The identifier of this period, e.g. "GMT" (Greenwich Mean Time) or "BST"
     # (British Summer Time) for "Europe/London". The returned identifier is a 
     # symbol.
-    attr_reader :zone_identifier        
+    attr_reader :zone_identifier 
+    alias :abbreviation :zone_identifier
     
     # Total offset from UTC (seconds). Equal to utc_offset + std_offset.
     attr_reader :utc_total_offset
